--- a/src/assets/styles/GetStarted.css
+++ b/src/assets/styles/GetStarted.css
@@ -16,6 +16,7 @@
     margin: 0 auto;
     padding-bottom: 0;
     font-family: 'Circular Std', sans-serif;
+    margin-top: 50px;
   }
   
   .main {
