--- a/src/assets/styles/Statistics.css
+++ b/src/assets/styles/Statistics.css
@@ -12,10 +12,11 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    width: 80%;
+    width: 60%;
     margin: 0 auto;
     padding-bottom: 0;
     font-family: 'Circular Std', sans-serif;
+    margin-top: 50px;
   }
   
   .statsValues {
@@ -41,6 +42,7 @@
     font-size: 25px;
     font-weight: 400;
     font-family: 'Circular Std', sans-serif;
+    width: 100px;;
   }
   
   .value{
